# multimedia_histreamer

./: .gitignore  BUILD.gn  CMakeLists.txt  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  config.gni  histreamer_BUILD_gn  ohos.build
engine/: CMakeLists.txt
engine/factory/: hst_engine_factory.cpp  hst_engine_factory.h
engine/foundation/: BUILD.gn  blocking_queue.h  buffer_pool.h  error_code.h  log.h  meta.cpp  meta.h  type_define.h  utils.h
engine/foundation/osal/: osal_config.h
engine/foundation/utils/: constants.cpp  constants.h  dump_buffer.cpp  dump_buffer.h  hitrace_utils.cpp  hitrace_utils.h  steady_clock.cpp
engine/include/foundation/: log.h
engine/pipeline/: BUILD.gn
engine/pipeline/core/: clock_manager.cpp  clock_manager.h  clock_provider.h  compatible_check.cpp  compatible_check.h  error_code.cpp  error_code.h  event.cpp  event.h  filter.h  filter_base.cpp  filter_base.h  filter_callback.h  filter_type.h  i_media_sync_center.h  media_sync_manager.cpp  media_sync_manager.h  parameter.h  pipeline.h  pipeline_core.cpp  pipeline_core.h  plugin_attr_desc.h  port.cpp  port.h  sync_info_manager.cpp  sync_info_manager.h  sync_info_provider.h  type_define.h
engine/pipeline/factory/: filter_factory.cpp  filter_factory.h
engine/pipeline/pipeline_common/: event.h
engine/player/: BUILD.gn  hiplayer.cpp  hiplayer_impl.cpp  hiplayer_impl.h  play_executor.h
engine/player/internal/: init_state.h  pause_state.h  playing_state.h  prepare_state.h  preparing_state.h  ready_state.h  state.cpp  state.h  state_machine.cpp  state_machine.h
engine/player/lite/: hiplayer_impl.cpp  hiplayer_impl.h
engine/player/standard/: hiplayer_impl.cpp  hiplayer_impl.h  media_utils.cpp  media_utils.h
engine/plugin/: BUILD.gn
engine/plugin/common/: any.h  media_sink.cpp  media_sink.h  media_source.cpp  media_source.h  plugin_audio_tags.h  plugin_buffer.cpp  plugin_buffer.h  plugin_caps.h  plugin_caps_builder.h  plugin_event.h  plugin_source_tags.h  plugin_tags.h  plugin_time.h  plugin_types.h  plugin_video_tags.h  share_allocator.cpp  share_allocator.h  share_memory.cpp  share_memory.h  surface_allocator.cpp  surface_allocator.h  surface_buffer.cpp  surface_buffer.h  surface_memory.cpp  surface_memory.h  tag_map.h  tag_value_map.h
engine/plugin/convert/: ffmpeg_convert.cpp
engine/plugin/core/: all_plugin_static.h  audio_sink.cpp  audio_sink.h  avtrans_input.cpp  avtrans_input.h  avtrans_output.cpp  avtrans_output.h  base.cpp  base.h  codec.cpp  codec.h  demuxer.cpp  demuxer.h  file_sink.cpp  file_sink.h  hdi_adapter.cpp  hdi_adapter.h  hdi_adapter_param_map.h  hdi_adapter_register.h  hdi_utils.cpp  hdi_utils.h  muxer.cpp  muxer.h  output_sink.cpp  output_sink.h  plugin_core_utils.cpp  plugin_core_utils.h  plugin_info.h  plugin_loader.cpp  plugin_loader.h  plugin_manager.cpp  plugin_manager.h  plugin_meta.cpp  plugin_meta.h  plugin_register.cpp  plugin_register.h  plugin_wrapper.cpp  plugin_wrapper.h  source.cpp  source.h  (+3 more)
engine/plugin/interface/: audio_sink_plugin.h  codec_plugin.h  demuxer_plugin.h  file_sink_plugin.h  hcodec_plugin.h  output_sink_plugin.h  plugin_base.h  plugin_definition.h  source_plugin.h  video_sink_plugin.h
engine/plugin/plugins/: BUILD.gn  all_plugin_static.h.in
engine/recorder/: recorder_executor.h
engine/recorder/internal/: error_state.h  init_state.h  pause_state.h  ready_state.h  recording_setting_state.h  recording_state.h  state.cpp  state.h  state_machine.cpp  (+1 more)
engine/scene/: BUILD.gn
engine/utils/: BUILD.gn  blocking_queue.h  buffer_pool.h  constants.cpp  constants.h  event.h  memory_helper.h  ring_buffer.h  singleton.h  steady_clock.cpp  steady_clock.h  type_define.h  utils.cpp  utils.h
src/: BUILD.gn  CMakeLists.txt
src/capi/: BUILD.gn  native_avbuffer.cpp  native_avbuffer_queue.cpp  native_avformat.cpp  native_avmemory.cpp
src/common/: BUILD.gn  avsharedmemorypool.cpp  plugin_attr_desc.h  plugin_audio_tags.h  plugin_caps_builder.h  plugin_source_tags.h  plugin_time.h  plugin_video_tags.h  share_allocator.cpp  share_allocator.h  share_memory.cpp  share_memory.h  surface_allocator.cpp  surface_allocator.h  surface_memory.cpp  surface_memory.h
src/filter/: filter.cpp  filter_factory.cpp
src/meta/: any.cpp  format.cpp  media_source.cpp  meta.cpp
src/pipeline/: pipeline.cpp
src/plugin/: plugin_buffer.cpp  plugin_factory.h  plugin_loader.cpp  plugin_manager.cpp  plugin_register.cpp  pre_defines.h
test/fuzztest/: BUILD.gn
test/scenetest/: BUILD.gn  CMakeLists.txt  test_single_audio_recorder_fast.h  test_single_audio_recorder_slow.h  test_single_player_fast.h  test_single_player_slow_2.h  test_single_video_player_fast_2.h  test_single_video_player_fast_3.h  test_single_video_player_fast_4.h
tests/: BUILD.gn  CMakeLists.txt  main.cpp
tests/st/: CMakeLists.txt  test_lite_stream_player.h  test_player_exit.h  test_plugin_manager.h  test_single_3da_player_fast.h  test_single_audio_recorder_fast.h  test_single_audio_recorder_fast_audio_function.h  test_single_audio_recorder_fast_codec_aac.h  test_single_audio_recorder_fast_prepare.h  test_single_audio_recorder_fast_start_pause.h  test_single_audio_recorder_fast_stop_reset.h  test_single_audio_recorder_slow.h  test_single_player_fast.h  test_single_player_slow.h  test_single_player_slow_1.h  test_single_video_player_fast.h  test_single_video_player_fast_1.h  test_std_stream_player.h
tests/unittest/: CMakeLists.txt
tests/ut/: BUILD.gn  CMakeLists.txt  TestAlgoExt.cpp  TestAny.cpp  TestBitReader.cpp  TestBufferPool.cpp  TestCompatibleCheck.cpp  TestDataPacker.cpp  TestFFmpegAudioDecoder.cpp  TestFFmpegAudioEncoder.cpp  TestFFmpegAvcConfigDataParser.cpp  TestFFmpegUtils.cpp  TestFastPlayer.cpp  TestFilter.cpp  TestHiPlayer.cpp  TestLitePlayer.cpp  TestMeta.cpp  TestMetaBundle.cpp  TestMimeDefs.cpp  TestPipline.cpp  TestPlugin.cpp  TestPluginCommon.cpp  TestPluginManager.cpp  TestPluginManagerNoPlugin.cpp  TestPluginManagerOnePlugin.cpp  TestStateMachine.cpp  TestSynchronizer.cpp  TestTagMap.cpp  TestTagValueMap.cpp  TestUtils.cpp  TestVideoFFmpegEncoder.cpp
(+637 files in other folders)
