# Copyright (c) 2021-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  lite_library("histreamer") {
    if (ohos_kernel_type == "liteos_m") {
      target_type = "static_library"
      complete_static_lib = true
    } else {
      target_type = "shared_library"
    }
    sources = []
    deps = [
      "engine/foundation:histreamer_foundation",
      "engine/pipeline:histreamer_pipeline",
      "engine/plugin:histreamer_plugin",
      "engine/scene/player:histreamer_player",
      "engine/utils:histreamer_utils",
    ]
    public_deps = [ "//foundation/multimedia/utils/lite:media_common" ]
    public_configs = [ ":hiplayer_external_library_config" ]
  }
  config("hiplayer_external_library_config") {
    include_dirs = [ "//foundation/multimedia/histreamer/interface" ]
  }
} else {
  import("//build/ohos.gni")
  ohos_shared_library("histreamer") {
    sources = []
    deps = [
      "engine/foundation:histreamer_foundation",
      "engine/pipeline:histreamer_pipeline",
      "engine/plugin:histreamer_plugin",
      "engine/scene/player:histreamer_player",
      "engine/utils:histreamer_utils",
    ]
    relative_install_dir = "media"
    output_name = "media_engine_histreamer"
    output_extension = "z.so"
    subsystem_name = "multimedia"
    part_name = "multimedia_histreamer"
  }
}
